tests/pos/arrays/22-array.ts

/*@ mkArray :: ( ) => { IArray<number> | len v = 5 } */
export function mkArray( ) {
	return new Array<number>(5);
}
